cambio de indicador, prueba de PULL up

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Wed Aug 24 22:29:38 COT 2022
+#Thu Feb 09 16:37:19 COT 2023
 default.languagetoolchain.version=2.00
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.50\\packs\\Microchip\\dsPIC30F_DFP\\1.4.104
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v2.00\\bin
-host.id=1ohy-6unj-91
-configurations-xml=96f0bff6e0a64ed4d41112427dce1e8b
+host.id=j1nx-e2ag-2
+configurations-xml=5f551834788b72f25fc18e5c30944ec3
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5232c20b48df3223daf8c79e5b83e9a8
-user-defined-mime-resolver-xml=none
+user-defined-mime-resolver-xml=7e5d7faf90cdcc1b607f7b1d29ad00e3
 proj.dir=C\:\\Users\\mario\\MPLABXProjects\\Pruebas 1.X
 host.platform=windows
 default.com-microchip-mplab-nbide-toolchain-xc16-XC16LanguageToolchain.md5=011e7d7f2217ee6d4a28eb1eb36c01b4
